force-app/main/default/objects/Disclosure_Action__c/Disclosure_Action__c.object-meta.xml
<CustomObject>
    <label>Disclosure Action</label>
    <nameField>
        <displayFormat>DA-{00000000}</displayFormat>
        <label>Disclosure Action Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disclosure Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>