force-app/main/default/objects/Disclosure_Action__c/fields/Contact_Action__c.field-meta.xml
<CustomField>
    <fullName>Contact_Action__c</fullName>
    <label>Contact Action</label>
    <referenceTo>Contact_Action__c</referenceTo>
    <relationshipLabel>Disclosure Actions</relationshipLabel>
    <relationshipName>Disclosure_Actions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>