force-app/main/default/objects/Disclosure_Action__c/fields/Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Disclosure__c</fullName>
    <label>Disclosure</label>
    <referenceTo>Disclosure__c</referenceTo>
    <relationshipLabel>Disclosure Actions</relationshipLabel>
    <relationshipName>Disclosure_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>