force-app/main/default/objects/Disclosure_Action__c/fields/Reminder_1__c.field-meta.xml
<CustomField>
    <fullName>Reminder_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder 1</label>
    <type>Checkbox</type>
</CustomField>