force-app/main/default/objects/Disclosure_Action__c/fields/Reminder_2__c.field-meta.xml
<CustomField>
    <fullName>Reminder_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder 2</label>
    <type>Checkbox</type>
</CustomField>