force-app/main/default/objects/Disclosure_Action__c/fields/Reminder_3__c.field-meta.xml
<CustomField>
    <fullName>Reminder_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder 3</label>
    <type>Checkbox</type>
</CustomField>