force-app/main/default/objects/Disclosure_Action__c/recordTypes/Complete_Draft_Disclosure.recordType-meta.xml
<RecordType>
    <fullName>Complete_Draft_Disclosure</fullName>
    <active>true</active>
    <label>Complete Draft Disclosure</label>
</RecordType>