force-app/main/default/objects/Disclosure_Action__c/recordTypes/Endorse_or_Delegate_Disclosure.recordType-meta.xml
<RecordType>
    <fullName>Endorse_or_Delegate_Disclosure</fullName>
    <active>true</active>
    <label>Endorse or Delegate Disclosure</label>
</RecordType>