force-app/main/default/objects/Disclosure_Action__c/recordTypes/Sign_Disclosure.recordType-meta.xml
<RecordType>
    <fullName>Sign_Disclosure</fullName>
    <active>true</active>
    <label>Sign Disclosure</label>
</RecordType>